--- a/MovieHubFrontend/src/app/components/movie-list/movie-list.component.html
+++ b/MovieHubFrontend/src/app/components/movie-list/movie-list.component.html
@@ -23,7 +23,7 @@
         <a [routerLink]="['/movies']">Movies</a>
       </h1>
   
-      <div class="d-flex align-items-center">
+      <div *ngIf="hasPerm" class="d-flex align-items-center">
         <!-- Add Movie Button -->
         <h1 style="color: #7d1324">
           <!-- <a *ngIf="isAuthenticated && hasPermission('add_movie')"[routerLink]="['/add-movie']"> -->
